# RL-AI

./: README.md  dev_notes.md  main.py  pyproject.toml  pytest.ini
archive/: app_streamlit_v1.py  mazeGen_proto.py
archive/streamlit_ui_r1_obs/: main_panel_r1.py  progressive_learning_r1.py  sidebar_ui_r1.py  text_num_r1.py
assignment_3_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: DEV_NOTES.md  FOR_BEGINNERS.md  LOGGER_README.md  MARKOV_DECISION_PROCESS.md  MATH_FOUNDATIONS.md  PHASE_1.md  PHASE_2.md
rc_agents/: README.md  __init__.py  __main__.py
rc_agents/config/: __init__.py  ui_config.py
rc_agents/data/: __init__.py  q_table.npz  q_table_2_60x60.npz  q_table_3_60x60_set_start_set_goal.npz
rc_agents/data/testing/: botmovements.txt  q_table.npy  q_table_1.npz  rl_100x100_ep6000_s3000_e0.3_a0.5_g0.9.npz  rl_agent_1000_episodes.npz  rlf_agent_1000_episodes.npz
rc_agents/edge_ai/: __init__.py
rc_agents/edge_ai/rcg_edge/: __init__.py
rc_agents/envs/: __init__.py  grid_env.py  maze_env.py
rc_agents/testers/: test__action_selection.py  test_agent_catalog.py  test_convergence_tracker.py  test_covergence_tracker.py  test_factory.py  test_grid_env.py  test_maze_env.py  test_maze_generation.py  test_maze_runner.py  test_progressive_learning.py  test_rlf_agent.py  test_runtime.py  test_trainer.py
rc_agents/ui/: README.md  __init__.py  app_streamlit.py  gui_main.py
rc_agents/ui/streamlit_ui/: __init__.py  agent_catalog.py  coordinates.py  factory.py  main_panel.py  progressive_learning.py  (+3 more)
rc_agents/utils/: __init__.py  logger.py
(+17 files in other folders)
